tests/negative/missing_type_annotation.osc
// EXPECT ERROR: Missing type annotation — binding declared without type
// All bindings must have explicit type annotations in Oscan.

fn! main() {
    let x = 42;
}
